--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: tsdb
 Type: Package
 Title: Terribly-Simple Data Base for Time Series
-Version: 0.4-1
-Date: 2017-02-06
+Version: 0.4-2
+Date: 2017-03-16
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
@@ -12,4 +12,4 @@ Description: A terribly-simple data base for time series. All
   saving files in a standardised format, and for retrieving and
   joining data.
 License: GPL-3
-Imports: datetimeutils, fastmatch, utils, zoo
+Imports: DBI, datetimeutils, fastmatch, utils, zoo
