[read_ts_tables] Use data.table::fread
Experimental new argument 'fread'. When TRUE, files are
read with data.table::fread instead of read.table.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,4 @@ Description: A terribly-simple data base for time series. All
   joining data.
 License: GPL-3
 Imports: DBI, datetimeutils, fastmatch, utils, zoo
-Suggests: MonetDBLite
+Suggests: MonetDBLite, data.table
