--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: tsdb
 Type: Package
 Title: Terribly-Simple Data Base for Time Series
-Version: 0.5-0
-Date: 2017-10-24
+Version: 0.6-0
+Date: 2018-11-21
 Maintainer: Enrico Schumann <es@enricoschumann.net>
-Authors@R: person("Enrico", "Schumann",
+Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
-                  email = "es@enricoschumann.net")
+                  email = "es@enricoschumann.net",
+		  comment = c(ORCID = "0000-0001-7601-6576"))
 Description: A terribly-simple data base for time series. All
   series are saved as csv files. The package offers utilities for
   saving files in a standardised format, and for retrieving and
