--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: tsdb
 Type: Package
 Title: Terribly-Simple Data Base for Time Series
 Version: 0.6-0
-Date: 2018-11-21
+Date: 2019-02-14
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
@@ -13,5 +13,5 @@ Description: A terribly-simple data base for numeric time
   offers utilities for saving files in a standardised
   format, and for retrieving and joining data.
 License: GPL-3
-Imports: DBI, datetimeutils, fastmatch, utils, zoo
-Suggests: MonetDBLite
+Imports: datetimeutils, fastmatch, utils, zoo
+Suggests: DBI, MonetDBLite
