[read_ts_tables] New argument 'frequency'

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,8 @@ export(
 
 importFrom("datetimeutils",
            "is_businessday",
-           "previous_businessday")
+           "previous_businessday",
+           "roundPOSIXt")
 
 importFrom("fastmatch",
            "fmatch")
