--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,17 @@ Package: tsdb
 Type: Package
 Title: Terribly-Simple Data Base for Time Series
 Version: 0.6-0
-Date: 2019-03-20
+Date: 2019-03-21
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
                   email = "es@enricoschumann.net",
 		  comment = c(ORCID = "0000-0001-7601-6576"))
-Description: A terribly-simple data base for numeric time
-  series. All series are saved as csv files. The package
-  offers utilities for saving files in a standardised
-  format, and for retrieving and joining data.
+Description: A terribly-simple data base for numeric
+  time series. Series are stored in CSV format. The
+  package offers utilities for saving series in a
+  standardised format, and for retrieving and joining
+  data.
 License: GPL-3
 Imports: datetimeutils, fastmatch, utils, zoo
 Suggests: DBI, MonetDBLite, data.table
