--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: tsdb
 Type: Package
 Title: Terribly-Simple Data Base for Time Series
 Version: 0.6-1
-Date: 2019-03-24
+Date: 2019-03-26
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
@@ -12,7 +12,7 @@ Description: A terribly-simple data base for numeric
   time series, written purely in R, so no external
   database-software is needed. Series are stored in
   plain-text files (the most-portable and enduring file
-  type) in CSV format; timestamps are encoded in R's
+  type) in CSV format; timestamps are encoded using R's
   native numeric representation for Date/POSIXct, which
   makes them fast to parse, but keeps them accessible
   with other software. The package provides tools for
@@ -24,3 +24,6 @@ Description: A terribly-simple data base for numeric
 License: GPL-3
 Imports: datetimeutils, fastmatch, utils, zoo
 Suggests: DBI, MonetDBLite, data.table
+URL: http://enricoschumann.net/R/packages/tsdb,
+     https://github.com/enricoschumann/tsdb,
+     https://gitlab.com/enricoschumann/tsdb
